# Grapengine

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CompilationOptions.cmake  Readme.md  ge_application.cpp  ge_application.hpp  ge_entities.cpp  ge_entities.hpp  ge_event.cpp  ge_event.hpp  ge_pch.hpp  ge_renderer.cpp  ge_renderer.hpp  ge_vector.cpp  ge_vector.hpp  ge_window.cpp  ge_window.hpp  main.cpp  vcpkg.json
.github/workflows/: clang-tidy-check.yaml
Assets/scenes/: Scene_Default.yaml  Scene_Diffuse.yaml  Scene_Learn.yaml  Scene_Outdoor.yaml  Scene_Specular.yaml
Assets/shaders/: Material.fshader.glsl  Material.vshader.glsl
Game/: CMakeLists.txt  Game.cpp  Game.hpp  MainLayer.cpp  MainLayer.hpp  game_pch.hpp
Game/assets/shaders/: PositionAndColor.vshader.glsl
Grapengine/: CMakeLists.txt  RunClangd.cmake  grapengine.hpp  grapengine_pch.hpp
Grapengine/controllers/: ge_app_controller.cpp  ge_app_controller.hpp
Grapengine/core/: ge_application.cpp  ge_application.hpp  ge_assert.hpp  ge_config.cpp  ge_config.hpp  ge_context.cpp  ge_context.hpp  ge_entry_point.hpp  ge_macros.hpp  ge_memory.hpp  ge_platform.cpp  ge_platform.hpp  ge_time_step.hpp  ge_type_aliases.hpp  ge_window.cpp  ge_window.hpp
Grapengine/drawables/: ge_canvas.cpp  ge_canvas.hpp  ge_color.cpp  ge_color.hpp  ge_cube.cpp  ge_cube.hpp  ge_cylinder.cpp  ge_cylinder.hpp  ge_draw_primitive.hpp  ge_drawable.cpp  ge_drawable.hpp  ge_drawing_object.cpp  ge_drawing_object.hpp  ge_mesh.cpp  ge_mesh.hpp  ge_world_reference.cpp  ge_world_reference.hpp
Grapengine/events/: ge_event.cpp  ge_event.hpp  ge_event_type.hpp
Grapengine/input/: ge_input.cpp  ge_input.hpp  ge_key_codes.cpp  ge_key_codes.hpp
Grapengine/layer/: ge_imgui_layer.cpp  ge_imgui_layer.hpp  ge_layer.cpp  ge_layer.hpp
Grapengine/log/: ge_logger.cpp  ge_logger.hpp
Grapengine/math/: ge_arithmetic.cpp  ge_arithmetic.hpp  ge_geometry.cpp  ge_geometry.hpp  ge_quaternions.cpp  ge_quaternions.hpp  ge_transformations.cpp  ge_transformations.hpp  ge_vector.cpp  ge_vector.hpp
Grapengine/profiling/: ge_profiler.hpp  ge_time.cpp  ge_time.hpp  ge_tracy_wrapper.cpp
Grapengine/renderer/: ge_batch_renderer.cpp  ge_batch_renderer.hpp  ge_buffer_handler.cpp  ge_buffer_handler.hpp  ge_buffer_layout.cpp  ge_buffer_layout.hpp  ge_camera.cpp  ge_camera.hpp  ge_editor_camera.cpp  ge_editor_camera.hpp  ge_framebuffer.cpp  ge_framebuffer.hpp  ge_gl_checkers.cpp  ge_gl_checkers.hpp  ge_index_buffer.cpp  ge_index_buffer.hpp  ge_ishader_program.cpp  ge_ishader_program.hpp  ge_light_source.cpp  ge_light_source.hpp  ge_renderer.cpp  ge_renderer.hpp  ge_renderer_id.hpp  ge_shader.cpp  ge_shader.hpp  ge_shader_data_types.hpp  ge_texture_2d.cpp  ge_texture_2d.hpp  ge_vertex_array.cpp  ge_vertex_array.hpp  ge_vertex_buffer.cpp  ge_vertex_buffer.hpp  ge_vertices_data.cpp  ge_vertices_data.hpp
Grapengine/renderer/shader_programs/: ge_light_source.hpp  ge_material_shader.cpp  ge_material_shader.hpp  ge_pos_tex_shader.cpp  ge_pos_tex_shader.hpp
Grapengine/scene/: ge_comp_types.hpp  ge_components.cpp  ge_components.hpp  ge_ec_registry.cpp  ge_ec_registry.hpp  ge_entity.cpp  ge_entity.hpp  ge_scene.cpp  ge_scene.hpp  ge_scene_camera.cpp  ge_scene_camera.hpp  ge_scriptable_entity.cpp  ge_scriptable_entity.hpp  ge_textures_registry.cpp  ge_textures_registry.hpp
Grapengine/serializer/: ge_components_serializer.cpp  ge_components_serializer.hpp  ge_scene_serializer.cpp  ge_scene_serializer.hpp  ge_serializer_constants.hpp  ge_textures_registry_serializer.cpp  ge_textures_registry_serializer.hpp
Grapengine/tests/: CMakeLists.txt  test_camera.cpp  test_events.cpp  test_random.cpp  test_shader.cpp  test_transformations.cpp  test_vector.cpp
Grapengine/utils/: ge_dimension.hpp  ge_io.cpp  ge_ipubsub.hpp  ge_random.cpp  ge_random.hpp  ge_type_utils.cpp  ge_type_utils.hpp
Wineglass/: CMakeLists.txt  Editor.cpp  Editor.hpp  EditorLayer.cpp  EditorLayer.hpp  WineglassPCH.hpp  imgui.ini  main.cpp
Wineglass/assets/shaders/: Material.fshader.glsl  Material.vshader.glsl  PositionAndTex2D.fshader.glsl  PositionAndTex2D.vshader.glsl
Wineglass/nativescripts/: CMakeLists.txt  CamController.cpp  CamController.hpp  NativeScriptsPCH.hpp
Wineglass/panels/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp
Wineglass/scenes/: SavedScene.yaml
app/: CMakeLists.txt  main.cpp
assets/shaders/: PositionAndColor.fshader.glsl  (+3 more)
include/: ge.hpp  ge_application.hpp  ge_assert.hpp  ge_buffer_layout.hpp  ge_canvas.hpp  ge_circle_shape.hpp  ge_color.hpp  ge_config.hpp  ge_data_types.hpp  ge_draw_primitive.hpp  ge_drawable.hpp  ge_entities.hpp  ge_event.hpp  ge_event_type.hpp  ge_gl_checkers.hpp  ge_index_buffer.hpp  ge_memory.hpp  ge_memory_monitor.hpp  ge_pch.hpp  ge_random.hpp  ge_rect_shape.hpp  ge_renderer.hpp  ge_shader.hpp  ge_shaders_library.hpp  ge_system.hpp  ge_texture_2d.hpp  ge_transformations.hpp  ge_using.hpp  ge_vector.hpp  ge_vertex_array.hpp  ge_vertex_buffer.hpp  ge_vertices_data.hpp  ge_window.hpp
src/: CMakeLists.txt  ge_application.cpp  ge_arithmetic.cpp  ge_assert.cpp  ge_buffer_layout.cpp  ge_camera.cpp  ge_canvas.cpp  ge_circle_shape.cpp  ge_cube.cpp  ge_cylinder.cpp  ge_draw_primitive.cpp  ge_drawable.cpp  ge_editor_camera.cpp  ge_entities.cpp  ge_event.cpp  ge_gl_checkers.cpp  ge_imgui_layer.cpp  ge_index_buffer.cpp  ge_input.cpp  ge_io.cpp  ge_layer.cpp  ge_logger.cpp  ge_memory.cpp  ge_mesh.cpp  ge_platform.cpp  ge_pos_color_shader.cpp  ge_pos_tex_shader.cpp  ge_quaternions.cpp  ge_random.cpp  ge_rect_shape.cpp  ge_renderer.cpp  ge_shader.cpp  ge_shaders_library.cpp  ge_texture_2d.cpp  ge_transformations.cpp  ge_vector.cpp  ge_vertex_array.cpp  ge_vertex_buffer.cpp  ge_window.cpp  ge_world_reference.cpp
tests/: CMakeLists.txt  test_camera.cpp  test_components_serializer.cpp  test_events.cpp  test_io.cpp  test_main.cpp  test_random.cpp  test_scene.cpp  test_scene_serializer.cpp  test_shader.cpp  test_transformations.cpp  test_vector.cpp  test_vertex_array.cpp  test_window.cpp  tests_pch.hpp
(+81 files in other folders)
